#mg: reopens